--- a/deno/deno.json
+++ b/deno/deno.json
@@ -10,7 +10,6 @@
   "pirsch": {
     "hostname": "localhost.com",
     "accessToken": "pa_82xTB69lqUq7uTA5S4ELDMGXdTvcoEqJUwzjVPNsxuQG5",
-    "protocol": "http",
-    "ip": "87.171.210.182"
+    "protocol": "http"
   }
 }
